<resources>
    <!-- General -->
    <string name="app_name">SafaGive</string>
    <string name="title">Título</string>
    <string name="category">Categoría</string>

    <!-- Login -->
    <string name="tituloLogin">“El poder de ayudar”</string>
    <string name="usuario">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="contrasenia_r">Repite la contraseña</string>
    <string name="IniSesion">Iniciar sesión</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="register">Regístrate</string>
    <string name="login">Ingresar con cuenta Safa</string>
    <string name="recuerdame">Recuérdame</string>
    <string name="registro">Registro</string>

    <!-- Home -->
    <string name="title_home">Home</string>
    <string name="no_results">No hay resultados</string>
    <string name="search_hint">Buscar…</string>
    <string name="img_content">Foto del producto</string>

    <!-- Donate -->
    <string name="title_donate">Donar</string>
    <string name="button_donate">Donar Producto</string>


    <!-- Chat -->
    <string name="title_chat">Chat</string>
    <string name="input_chat">Escribe un mensaje</string>
    <string name="button_chat">Enviar</string>

    <!-- Profile -->
    <string name="title_profile">Perfil</string>
    <string name="published_donations">Donaciones publicadas:</string>
    <string name="username">Nombre de usuario</string>
    <string name="email">Correo Electrónico</string>
    <string name="photo_description">Foto de perfil</string>

    <!-- Card View Producto -->
    <string name="product">Producto Nombre</string>
    <string name="description">Descripción</string>
    <string name="see_product">Ver Producto</string>
</resources>